# space-jam-dashboard

./: .dockerignore  .gitignore  Dockerfile  README.md  dockerignore  pyproject.toml
.aws/: spacejam-server-cli-input.json
.github/: copilot-instructions.md
.github/workflows/: CODEOWNERS  deploy.yaml  test.yaml
.streamlit/: config.toml
aws/: spacejam-server-cli-input.json
src/: app.py  backend.py  constants.py  figures.py  frontend.py  panel_frontend.py  prompts.py  streamlit_frontend.py  streamlit_utils.py
src/frontend/: Spacejam_Dashboard.py  figures.py  streamlit_utils.py
src/frontend/components/: html_component.py  matchup.html  team_viewer.html
src/frontend/pages/: 1_Team_Viewer.py  2_Matchup_Viewer.py
src/frontend/static/css/: base.css
src/frontend/templates/: base.html  index.html  matchup.html  team.html  trade.html
