[project]
name = "space-jam-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "espn-api>=0.43.0",
    "pandas>=2.2.3",
    "streamlit-autorefresh>=1.0.1",
    "streamlit>=1.40.2",
    "matplotlib>=3.9.3",
    "groq>=0.13.0",
    "jinja2>=3.1.4",
]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = true
